# PRISM

./: .gitignore  Cargo.toml  README.md
examples/: README.md
examples/bilinear_2d/: kernel.rs  main.rs
examples/bilinear_3d/: kernel.rs  main.rs
examples/mandelbrot/: kernel.rs  main.rs
examples/matrix_lut/: kernel.rs  main.rs
examples/neutral_lut/: kernel.rs  main.rs
examples/raytracing/: kernel.rs  main.rs
src/: compute.rs  lib.rs
src/compute/: buffer.rs  dispatcher.rs  kernel.rs  msaa.rs
src/compute/buffer/: linear_buffer.rs  swapchain_buffer.rs  texel_buffer.rs  voxel_buffer.rs
src/compute/dispatcher/: semaphore.rs
