[package]
name = "prism"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zCubed3/prism"
description = "CPU Compute library for Rust"
authors = [
    "Liam Reese <zcubedtres@gmail.com>"
]

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = [ "threading", "serialization", "image" ]
serialization = [ "serde", "bincode", "serde_arrays", "rgml/serialization" ]
threading = [ "rayon" ]
double_precision = [ "rgml/real_t_is_double" ]

[dependencies]
rgml = { git = "https://github.com/zCubed3/rgml.git" }
image = { version = "0.25.5", optional = true }
rayon = { version = "1.5.3", optional = true }
serde = { version = "1.0.147", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"